Post-launch style edits, fix bg image size on tablet mobile

--- a/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
+++ b/wp-content/themes/cookiequeen/css/corner-hutch-cookies.webflow.css
@@ -1856,6 +1856,9 @@ em {
 }
 
 @media (max-width: 991px) {
+  .body.home.page {
+    background-size: auto;
+  }
   .main-navbar {
     position: absolute;
     left: 0%;
